Fixed Incident Add/Edit and duplicate email

--- a/Assignment1/Views/Customers/Edit.cshtml
+++ b/Assignment1/Views/Customers/Edit.cshtml
@@ -17,7 +17,7 @@
 }
 @section header{
     <h2>@title</h2>
-
+    <p>@ViewBag.duplicate</p>
     <form method="post">
         <!--This line for validation after put [required] in Category controller-->
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
