--- a/Assignment1/Areas/Incidents/Views/Home/Edit.cshtml
+++ b/Assignment1/Areas/Incidents/Views/Home/Edit.cshtml
@@ -8,10 +8,13 @@
 
 <form method="post">
     <!--This line for validation after put [required] in Category controller-->
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="row">
         <div class="col-8">
-            <input type="hidden" asp-for="IncidentsId" />
+            @if (ViewBag.Action == "Edit")
+            {
+                <input type="hidden" asp-for="IncidentsId" />
+            }
             <div class="form-group row">
                 <div class="col-4">
                     <label asp-for="CustomersId">Customer</label>
