--- a/Assignment1/wwwroot/css/site.css
+++ b/Assignment1/wwwroot/css/site.css
@@ -251,7 +251,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(315deg, #00ccff, orangered);
+    background: linear-gradient(315deg, aqua, orangered);
 }
 
 .Incidents-container .box::after {
@@ -262,7 +262,7 @@ body {
     width: 100%;
     height: 100%;
     color: snow;
-    background: linear-gradient(315deg, #00ccff, orangered);
+    background: linear-gradient(315deg, aqua, orangered);
     filter: blur(30px);
     font-size: large;
 }
