I hope this is final file :D

--- a/Assignment1/Views/Techincident/Edit.cshtml
+++ b/Assignment1/Views/Techincident/Edit.cshtml
@@ -12,6 +12,7 @@
         <input type="hidden" asp-for="IncidentsId" class="form-control" />
         <input type="hidden" asp-for="CustomersId" class="form-control" />
         <input type="hidden" asp-for="Product.ProductsId" class="form-control" />
+        <input type="hidden" asp-for="Product.Price" class="form-control" />
         <input type="hidden" asp-for="Technician.TechniciansId" class="form-control" />
         <input type="hidden" asp-for="Technician.Email" class="form-control" />
         <input type="hidden" asp-for="Technician.Phone" class="form-control" />
